Fixed Overflow Hidden On Mobile Devices
Now only overflow x is hidden on mobile devices.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -99,7 +99,7 @@ nav {
 // Mobile Breakpoint
 @media screen and (max-width: 576px) {
 	body {
-		overflow: hidden;
+		overflow-x: hidden;
 	}
 
 	nav > .nav-links {
